--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "hw"
-  avatar           : "profile2.jpg"
+  avatar           : "Kurumi.jepg"
   bio              : "嗨"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
